Got carousel, main images, and appended buttons all linked up. Site has a few bugs, such as the overlay randomly growing shorter or the carousel not moving certain images. Was able to generate text, make it invisible, and append it to the right side. Need to work on finding an efficient way to toggleClass.

--- a/styles.css
+++ b/styles.css
@@ -167,8 +167,8 @@ body{
 
 .navimages{
 	border-radius: 50%;
-	width:50px;
-	height:50px;
+	width:75px;
+	height:75px;
 	padding:10px;
 }
 
@@ -185,4 +185,24 @@ body{
 }
 #toExit{
 	margin-top:7.5em;
+}
+
+.here{
+	visibility:hidden;
+}
+
+.selected{
+	visibility:visible;
+	position: absolute;
+	top:10em;
+	right:0;
+	text-align:center;
+	padding:1em;
+	margin:1em;
+}
+.selected h2{
+	margin-bottom:0.5em;
+}
+.selected h4{
+	margin-bottom:3em;
 }
